# damm-v2

./: .gitignore  2025-10-14-based-on-where-we-stopped-in-usersuserdevelopm.txt  2025-10-14-claude-code-v2014.txt  2025-10-14-continue-on-my-conversation-in-usersuserdevelo.txt  2025-10-14-please-can-you-continue-from-where-i-stopped-in-th.txt  2025-10-14-please-can-you-continue-the-conversation-from-wher.txt  2025-10-14-please-continue-from-where-we-stopped-usersuser.txt  2025-10-14-please-evaluate-my-current-code-agains-the-bounty.txt  2025-10-14-swap-successfully-88ms.txt  2025-10-14-usersuserdevelopmentsolanabountiesfeeroute.txt  2025-10-15-perfect-now-i-understand-the-complete-picture.txt  2025-10-15-prompt-for-new-chat-replace-mock-streamflow-accou.txt  2025-10-15-when-i-run-usermr-dees-macbook-pro-feerouter-a.txt  2025-10-16-3-failing.txt  2025-10-16-i-see-the-issue-the-test-runs.txt  2025-10-16-swap-successfully-3712ms.txt  Anchor.toml  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  star-system-architecture.excalidraw.json  txtx.yml
programs/fee_router/: Cargo.toml
programs/fee_router/src/: constants.rs  cp_amm_types.rs  error.rs  events.rs  lib.rs
programs/fee_router/src/instructions/: add_honorary_liquidity.rs  crank_distribution.rs  initialize_position.rs  mod.rs  setup_policy.rs
programs/fee_router/src/integrations/: cp_amm.rs  mod.rs  streamflow.rs
programs/fee_router/src/state/: mod.rs  policy.rs  position_owner.rs  progress.rs
programs/fee_router/src/utils/: math.rs  mod.rs  pda.rs  validation.rs
runbooks/: README.md
runbooks/deployment/: main.tx  signers.localnet.tx  subgraphs.localnet.tx
tests/: 2025-10-16-please-do-a-thorough-evaluation-of-this-code-base.txt  alphaVaultWithSniperTax.test.ts  feeRouter.test.ts  honourary.test.ts  surfpool-integration.test.ts
tests/bankrun-utils/: addressLookupTable.ts  common.ts  constants.ts  cpAmm.ts  (+5 more)
(+1 files in other folders)
