[package]
name = "fee_router"
version = "0.1.0"
description = "DAMM v2 Honorary Quote-Only Fee Position"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
local = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed", "event-cpi"] }
anchor-spl = { workspace = true, features = [] }
bytemuck = { version = "1.20.0", features = ["derive"] }
borsh = "1.5.1"
streamflow-sdk = { version = "0.10", features = ["cpi"] }